# QuasarVideo

./: .dockerignore  .env.example  .gitignore  AI视频分析系统（AI Video Intelligence System）.md  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/aivis_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  api.py  celery_app.py  config.py  domain.py  main.py  store.py  tasks.py
backend/app/services/: __init__.py  agents.py  executor.py  knowledge.py  pipeline.py  preprocess.py  report.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: test_api.py  test_executor.py  test_export.py  test_preprocess.py  test_store.py
docs/: deployment.md  production-roadmap.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/report/[taskId]/: page.tsx
frontend/lib/: api.ts
scripts/: deploy.sh
