[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivis-backend"
version = "0.1.0"
description = "FastAPI backend for AIVIS"
requires-python = ">=3.10"
dependencies = [
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.5.2",
  "redis>=5.0.8",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "httpx>=0.27.2",
  "ruff>=0.6.9"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
